2008-05-12  Jonathan Pobst  <monkey@jpobst.com>

	* PictureBox.cs: Always invalidate on resize.  Fixes an app for jhill.

2008-05-12  Jonathan Pobst  <monkey@jpobst.com>

	* BindingSource.cs: GetListSortDescription is not public.

2008-05-12  Jonathan Pobst  <monkey@jpobst.com>

	* WebBrowser.cs, WebBrowserBase.cs, WebBrowserSiteBase.cs: corcompare.

2008-05-12  Jonathan Pobst  <monkey@jpobst.com>

	* HtmlElement.cs: Fix parameter names to match MS.
	* HtmlWindowCollection.cs: Should not be sealed.

2008-05-12  Jonathan Pobst  <monkey@jpobst.com>

	* ThemeWin32Classic.cs: Always draw the scrollbar area under the thumb
	button, because the thumb button will not get drawn if the scrollbar
	is disabled.  [Fixes bug #389262]

2008-05-12  Jonathan Pobst  <monkey@jpobst.com>

	* ListBox.cs: Handle End key for multi-column listboxen.
	[Fixes bug #389266]

2008-05-12  Jonathan Pobst  <monkey@jpobst.com>

	* ListBox.cs: Fix algorithm to determine which column our item is in.
	[Fixes bug #389265]

2008-05-12  Jonathan Pobst  <monkey@jpobst.com>

	* ListBox.cs: Invalidate when the listbox is resized.
	[Fixes bug #389256]

2008-05-12  Jonathan Pobst  <monkey@jpobst.com>

	* ListBox.cs: There is always at least one row in the ListBox (if
	we are doing these calculations.)  [Fixes bug #389253]

2008-05-12  Jonathan Pobst  <monkey@jpobst.com>

	* ListBox.cs: There is always at least one column in the ListBox.
	[Fixes bug #389250]

2008-05-10  Carlos Alberto Cortez <calberto.cortez@gmail.com>

	* ComboBox.cs: When handle is created call UpdateComboBoxBounds to
	ensure in Simple mode that the height is exactly the requested one.
	Also add the ComboBoxListControl to the controls collection in Simple
	mode even if handle hasn't been created.
	Fixes part of #371991.

2008-05-10  Carlos Alberto Cortez <calberto.cortez@gmail.com>

	* ComboBox.cs: For ComboListBox control -specially in Simple mode-, give focus to
	our ComboBox owner instead of giving it back to the previous control (